css/desktopTweets.css
html, body {
  margin: 0;
  padding: 0;
  font-family: Helvetica, Arial, sans-serif;
  overflow: hidden;
}

.chrome_bird_tweet {
  width: inherit;
  border: 0;
  margin: 0;
  -webkit-border-radius: 0;
}

#progress {
  width: 100%;
  position: absolute;
  display: none;
  background-color: rgba(0, 0, 0, 0.4);
  color: #fff;
  text-align: center;
  font-size: 8pt;
  white-space: nowrap;
  overflow: hidden;
}

